# iscore-addon-autom3d

./: .travis.yml  CMakeLists.txt  iscore_plugin_autom3d.cpp  iscore_plugin_autom3d.hpp
Autom3D/: Autom3DFactory.hpp  Autom3DLayerModel.cpp  Autom3DLayerModel.hpp  Autom3DLayerSerialization.cpp  Autom3DModel.cpp  Autom3DModel.hpp  Autom3DPresenter.cpp  Autom3DPresenter.hpp  Autom3DProcessMetadata.cpp  Autom3DProcessMetadata.hpp  Autom3DSerialization.cpp  Autom3DView.cpp  Autom3DView.hpp  Point.hpp
Autom3D/Commands/: Autom3DCommandFactory.cpp  Autom3DCommandFactory.hpp  ChangeAddress.cpp  ChangeAddress.hpp  SetAutom3DMax.hpp
Autom3D/Executor/: Component.cpp  Component.hpp  ComponentFactory.cpp  ComponentFactory.hpp  Executor.cpp  Executor.hpp
Autom3D/Inspector/: Autom3DInspectorFactory.cpp  Autom3DInspectorFactory.hpp  Autom3DInspectorWidget.cpp  Autom3DInspectorWidget.hpp  Autom3DStateInspector.cpp  Autom3DStateInspector.hpp  Autom3DStateInspectorFactory.cpp  Autom3DStateInspectorFactory.hpp
Autom3D/Panel/: AutomImage.cpp  AutomImage.hpp  AutomWidget.cpp  AutomWidget.hpp
Autom3D/State/: Autom3DState.cpp  Autom3DState.hpp
tools/travis/: build.sh  deps.sh
